# WanwanLab

./: Makefile  README.md  pyproject.toml  requirements.txt
build_test/: test_common_code.ipynb
conf/ppo/: config.yaml
conf/ppo/task/x2_walk_flat/: mujoco.yaml
conf/ppo/task/x2_wall_flip_tracking/: mujoco.yaml
scripts/: train_rsl_rl.py
src/wanwanlab/: __init__.py  cli.py  demo.py  dtype_config.py  structured_configs.py
src/wanwanlab/algos/ppo/: rsl_rl_ppo.py  rsl_rl_runtime.py
src/wanwanlab/assets/: __init__.py  hub.py
src/wanwanlab/assets/robots/agibotx2/: locomotion_task.xml  scene_climb_20_z_scale_1.xml  scene_crawl_slope.xml  scene_flat.xml  scene_flat_with_largebox.xml  scene_flat_with_wall.xml  scene_rough.xml  x2.xml  x2_raw.xml
src/wanwanlab/assets/robots/agibotx2/assets/: head_pitch_link.STL  head_yaw_link.STL  imu_in_head_link.STL  imu_in_pelvis_link.STL  imu_in_torso_link.STL  left_ankle_pitch_link.STL  left_ankle_roll_link.STL  left_elbow_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_hand_link.STL  left_wrist_pitch_link.STL  left_wrist_roll_link.STL  left_wrist_yaw_link.STL  lidar_link.STL  pelvis.STL  rgb_head_center_link.STL  rgb_head_rear_link.STL  rgbd_head_front_link.STL  right_ankle_pitch_link.STL  right_ankle_roll_link.STL  right_elbow_link.STL  right_hip_roll_link.STL  (+11 more)
src/wanwanlab/assets/robots/g1/: g1.xml  g1_sphere_hand.xml  locomotion_task.xml  scene_climb_20_z_scale_1.xml  scene_crawl_slope.xml  scene_flat.xml  scene_flat_with_largebox.xml  scene_flat_with_wall.xml  scene_rough.xml
src/wanwanlab/base/: __init__.py  augmentation.py  base.py  curriculum.py  final_observation.py  np_env.py  observations.py  registry.py  scene.py
src/wanwanlab/base/backend/: __init__.py  base.py  motrix_camera.py  playback_common.py
src/wanwanlab/base/backend/motrix/: __init__.py  backend.py  playback.py  scene.py
src/wanwanlab/base/backend/mujoco/: __init__.py  backend.py  playback.py  xml.py
src/wanwanlab/dr/: __init__.py  dr_utils.py  manager.py  provider.py  types.py
src/wanwanlab/envs/common/: __init__.py  math.py  rotation.py
src/wanwanlab/envs/locomotion/: __init__.py
src/wanwanlab/envs/locomotion/agibotx2/: __init__.py  base.py  joystick.py  symmetry.py
src/wanwanlab/envs/locomotion/common/: __init__.py  base.py  commands.py  domain_rand.py  dr_provider.py  height_scan.py  rewards.py  terrain_spawn.py
src/wanwanlab/envs/motion_tracking/agibotx2/: __init__.py  flip_tracking.py
src/wanwanlab/envs/motion_tracking/g1/: __init__.py  box_tracking.py  flip_tracking.py  flip_tracking_sac.py  motion_box_loader.py  motion_loader.py  tracking.py  tracking_obs.py  tracking_sac.py
src/wanwanlab/logging/: __init__.py  common.py  offpolicy.py  onpolicy.py  trace_event.py
src/wanwanlab/terrains/: __init__.py  config.py  heightfield_terrains.py  terrain_generator.py  utils.py
src/wanwanlab/tools/: completion.py  pull_assets.py
src/wanwanlab/training/: __init__.py  backend_adapter.py  common.py  experiment.py  monitoring.py  reward.py  rsl_rl.py  run.py  seed.py  sim2sim.py
src/wanwanlab/unit/: device.py  tensor.py
src/wanwanlab/utils/: __init__.py  nan_guard.py  tensor.py
src/wanwanlab/visualization/: __init__.py  interactive_playback.py  playback.py  render_many.py  viser_scene.py
(+2 files in other folders)
