[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "wanwanlab"
version = "0.1.0"
description = "Lab for Robot Learning"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch==2.7.0",
    "mujoco-uni==3.8.0",
    "gymnasium",
    "imageio",
    "etils",
    "hydra-core>=1.3",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "packaging",
    "mediapy",
    "tensorboard",
    "setuptools<70",
    "rich",
    "tqdm",
    "typing-extensions",
    "lark>=1.3.1",
    "wandb",
    "notebook>=7.5.5",
    "onnxruntime<1.20 ; python_version < '3.11'",
    "onnxruntime>=1.20 ; python_version >= '3.11'",
    "huggingface_hub>=0.25",
    "ninja ; sys_platform == 'linux'",
]

[project.scripts]
train = "wanwanlab.cli:train_main"
eval = "wanwanlab.cli:eval_main"
demo = "wanwanlab.cli:demo_main"
wanwanlab-complete = "wanwanlab.tools.completion:main"
wanwanlab-viz-nan = "wanwanlab.tools.viz_nan:main"
wanwanlab-export-scene = "wanwanlab.tools.export_scene:main"
wanwanlab-render-teaser = "wanwanlab.tools.render_teaser:main"
wanwanlab-import-robot = "wanwanlab.tools.import_robot:main"
wanwanlab-pull-assets = "wanwanlab.tools.pull_assets:main"

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pyright>=1.1.408"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform=='linux'" },
]

[tool.uv]
exclude-dependencies = ["torchvision"]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
extend-exclude = [".history"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",
    "N806",
    "E402",
    "F401",
    "N801",
    "F821",
    "E741",
    "N802",
    "N803",
    "N812",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_site_packages = true
exclude = [
    "src/wanwanlab/algos/torch/rsl_rl/", # vendored third-party, tracked in .gitignore
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running training or script smoke tests, or cumulatively expensive backend matrices",
]
addopts = "--tb=short -m 'not slow'"

[tool.coverage.run]
source = ["src/unilab"]
omit = ["*/rsl_rl/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
include = ["src/wanwanlab"]
exclude = [
    "src/wanwanlab/algos/torch/rsl_rl/",       # vendored third-party
    "src/wanwanlab/base/backend/",             # mujoco-uni stubs mismatch; optional backends
    "src/wanwanlab/envs/",                     # mujoco-uni internal API, stubs mismatch
    "src/wanwanlab/terrains/",                 # mujoco-uni MjSpec API, stubs mismatch
    "src/wanwanlab/training/monitoring.py",    # optional pynvml/psutil deps
    "src/wanwanlab/visualization/",            # direct mujoco C bindings + optional viser deps
]
reportMissingImports = "warning"
reportMissingModuleSource = "none"
